--- a/public/users.html
+++ b/public/users.html
@@ -590,26 +590,6 @@
                 </div>
               </div>
             </div>
-            <div class="bookmaker_holder">
-              <h1 class="disabled_ag_text">WAIT FOR FUNDS</h1>
-              <h1 class="bookmaker_title">Planet Sport Bet</h1>
-              <a id="skip-bookmaker-button" href="#" class="already_got_button w-button">Already Got</a>
-              <h1 class="bookmaker_title deposit">£10 Deposit</h1>
-              <a href="https://www.planetsportbet.com/" target="_blank" class="bookmaker_link w-button">Sign Up</a>
-              <div class="bookmaker_status_holder">
-                <h1 class="bookmaker_status_title">Not Made</h1>
-              </div>
-              <a href="#" class="show_form w-button">Enter Details</a>
-              <div class="bookmaker_form w-form">
-                <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="658d9d61bddb427e1206a154" data-wf-element-id="74b08e38-44ae-00df-68d8-58318b92a796"><label for="username-2" class="field_label">Account Username</label><input class="text_field username w-input" maxlength="256" name="Account-Setting" data-name="Account Setting" placeholder="" type="text" id="username" required=""><label for="Email-22" class="field_label">Account Email</label><input class="text_field email w-input" maxlength="256" name="Email-14" data-name="Email 14" placeholder="" type="email" id="Email-14" required=""><label for="account-setting-20" class="field_label">Account Password</label><input class="text_field account_setting w-input" maxlength="256" name="account-setting-12" data-name="Account Setting 12" placeholder="" type="text" id="account-setting-12" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
-                <div class="form_success w-form-done">
-                  <div>Details Received!</div>
-                </div>
-                <div class="w-form-fail">
-                  <div>Oops! Something went wrong while submitting the form.</div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -721,26 +701,6 @@
               <a href="#" class="show_form w-button">Enter Details</a>
               <div class="bookmaker_form w-form">
                 <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="658d9d61bddb427e1206a154" data-wf-element-id="cdf62d08-420d-0474-de99-77e20688aa81"><label for="username-2" class="field_label">Account Username</label><input class="text_field username w-input" maxlength="256" name="Account-Setting" data-name="Account Setting" placeholder="" type="text" id="username" required=""><label for="Email-22" class="field_label">Account Email</label><input class="text_field email w-input" maxlength="256" name="Email-15" data-name="Email 15" placeholder="" type="email" id="Email-15" required=""><label for="account-setting-20" class="field_label">Account Password</label><input class="text_field account_setting w-input" maxlength="256" name="account-setting-13" data-name="Account Setting 13" placeholder="" type="text" id="account-setting-13" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
-                <div class="form_success w-form-done">
-                  <div>Details Received!</div>
-                </div>
-                <div class="w-form-fail">
-                  <div>Oops! Something went wrong while submitting the form.</div>
-                </div>
-              </div>
-            </div>
-            <div class="bookmaker_holder">
-              <h1 class="disabled_ag_text">WAIT FOR FUNDS</h1>
-              <h1 class="bookmaker_title">Hollywood Bets</h1>
-              <a id="skip-bookmaker-button" href="#" class="already_got_button w-button">Already Got</a>
-              <h1 class="bookmaker_title deposit">£20 Deposit</h1>
-              <a href="https://www.hollywoodbets.co.uk/articles/promotions/sportsbook-new-player-bonus-up-to-10-back-as-a-free-bet" target="_blank" class="bookmaker_link w-button">Sign Up</a>
-              <div class="bookmaker_status_holder">
-                <h1 class="bookmaker_status_title">Not Made</h1>
-              </div>
-              <a href="#" class="show_form w-button">Enter Details</a>
-              <div class="bookmaker_form w-form">
-                <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="658d9d61bddb427e1206a154" data-wf-element-id="36e8f543-56c4-1572-e697-1ff0cdd80391"><label for="username-2" class="field_label">Account Username</label><input class="text_field username w-input" maxlength="256" name="Account-Setting" data-name="Account Setting" placeholder="" type="text" id="username" required=""><label for="Email-22" class="field_label">Account Email</label><input class="text_field email w-input" maxlength="256" name="Email-20" data-name="Email 20" placeholder="" type="email" id="Email-20" required=""><label for="account-setting-20" class="field_label">Account Password</label><input class="text_field account_setting w-input" maxlength="256" name="account-setting-18" data-name="Account Setting 18" placeholder="" type="text" id="account-setting-18" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
                 <div class="form_success w-form-done">
                   <div>Details Received!</div>
                 </div>
@@ -950,6 +910,28 @@
               </div>
             </div>
           </div>
+          <div class="acc_bookmakers_row">
+            <div class="bookmaker_holder">
+              <h1 class="disabled_ag_text">WAIT FOR FUNDS</h1>
+              <h1 class="bookmaker_title">Hollywood Bets</h1>
+              <a id="skip-bookmaker-button" href="#" class="already_got_button w-button">Already Got</a>
+              <div class="text bookmaker">Sign Up and deposit using mobile app.<br><br>Please select the &#x27;£20 back as free bets offer&#x27;.</div>
+              <h1 class="bookmaker_title deposit">£20 Deposit</h1>
+              <div class="bookmaker_status_holder">
+                <h1 class="bookmaker_status_title">Not Made</h1>
+              </div>
+              <a href="#" class="show_form w-button">Enter Details</a>
+              <div class="bookmaker_form w-form">
+                <form id="email-form" name="email-form" data-name="Email Form" method="get" data-wf-page-id="658d9d61bddb427e1206a154" data-wf-element-id="36e8f543-56c4-1572-e697-1ff0cdd80391"><label for="username-2" class="field_label">Account Username</label><input class="text_field username w-input" maxlength="256" name="Account-Setting" data-name="Account Setting" placeholder="" type="text" id="username" required=""><label for="Email-22" class="field_label">Account Email</label><input class="text_field email w-input" maxlength="256" name="Email-20" data-name="Email 20" placeholder="" type="email" id="Email-20" required=""><label for="account-setting-20" class="field_label">Account Password</label><input class="text_field account_setting w-input" maxlength="256" name="account-setting-18" data-name="Account Setting 18" placeholder="" type="text" id="account-setting-18" required=""><input type="submit" data-wait="Please wait..." class="form_submit_button w-button" value="Submit"></form>
+                <div class="form_success w-form-done">
+                  <div>Details Received!</div>
+                </div>
+                <div class="w-form-fail">
+                  <div>Oops! Something went wrong while submitting the form.</div>
+                </div>
+              </div>
+            </div>
+          </div>>
         </div>
       </div>
       <div id="stage-9-container" class="acc_container _9">
