changed fitzdares offer

--- a/public/users.html
+++ b/public/users.html
@@ -1018,8 +1018,8 @@
               <h1 class="bookmaker_title"><strong>Fitzdares</strong></h1>
               <a id="skip-bookmaker-button" href="#" class="already_got_button w-button">Already Got</a>
               <div class="text bookmaker">Only sign up in the morning.<br></div>
-              <h1 class="bookmaker_title deposit">£100 Deposit</h1>
-              <a href="https://promotions.fitzdares.com/get-up-to-50-back/?btag=BvnObXJp-U3yff7mP4o40mNd7ZgqdRLk" target="_blank" class="bookmaker_link w-button">Sign Up</a>
+              <h1 class="bookmaker_title deposit">£50 Deposit</h1>
+              <a href="https://fitzdares.com/offers/2024-new-member-offer/" target="_blank" class="bookmaker_link w-button">Sign Up</a>
               <div class="bookmaker_status_holder">
                 <h1 class="bookmaker_status_title">Not Made</h1>
               </div>
