--- a/public/users.html
+++ b/public/users.html
@@ -354,7 +354,7 @@
               <h1 class="bookmaker_title">BetMGM</h1>
               <a id="skip-bookmaker-button" href="#" class="already_got_button w-button">Already Got</a>
               <h1 class="bookmaker_title deposit">£10 Deposit</h1>
-              <a href="https://www.betmgm.co.uk/promotions/sports/welcome-offer" target="_blank" class="bookmaker_link w-button">Sign Up</a>
+              <a href="https://www.betmgm.co.uk/promotions/sports/cheltenham-welcome-offer" target="_blank" class="bookmaker_link w-button">Sign Up</a>
               <div class="bookmaker_status_holder">
                 <h1 class="bookmaker_status_title">Not Made</h1>
               </div>
@@ -532,8 +532,8 @@
               <h1 class="disabled_ag_text">WAIT FOR FUNDS</h1>
               <h1 class="bookmaker_title">Rhino Bet</h1>
               <a id="skip-bookmaker-button" href="#" class="already_got_button w-button">Already Got</a>
-              <h1 class="bookmaker_title deposit">£25 Deposit</h1>
-              <a href="https://rhino.bet/?promo=bet-25-get-10fb&amp;stag=21643_65a3efb4a79aaf89adb50f31" target="_blank" class="bookmaker_link w-button">Sign Up</a>
+              <h1 class="bookmaker_title deposit">£20 Deposit</h1>
+              <a href="https://rhino.bet/?promo=twenty-20&stag=32067_65e5effb893d861fcb634bf7" target="_blank" class="bookmaker_link w-button">Sign Up</a>
               <div class="bookmaker_status_holder">
                 <h1 class="bookmaker_status_title">Not Made</h1>
               </div>
