--- a/public/support.html
+++ b/public/support.html
@@ -90,6 +90,78 @@
           <div id="completed-stage-text" class="completedstagetext">Completed all bookmakers on stage</div>
         </div>
       </div>
+      <div class="supportstageholder">
+        <div class="showbuttonholder">
+          <h1 class="h5 white support stagestext" id="supshowstage">Show Stages</h1>
+        </div>
+        <div class="allstagesholder" id="supallstages">
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">1</h1>
+            <h1 class="supportstagetext">Coral</h1>
+            <h1 class="supportstagetext">Skybet</h1>
+            <h1 class="supportstagetext">Ladbrokes</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">2</h1>
+            <h1 class="supportstagetext">Bet365</h1>
+            <h1 class="supportstagetext">Betfred</h1>
+            <h1 class="supportstagetext">WilliamHill</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">3</h1>
+            <h1 class="supportstagetext">Virgin Bet</h1>
+            <h1 class="supportstagetext">Parimatch</h1>
+            <h1 class="supportstagetext">Midnite</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">4</h1>
+            <h1 class="supportstagetext">BetMGM</h1>
+            <h1 class="supportstagetext">Sporting<br>Index</h1>
+            <h1 class="supportstagetext">Vickers</h1>
+            <h1 class="supportstagetext">Betfair Exchange</h1>
+            <h1 class="supportstagetext">Kwiff</h1>
+            <h1 class="supportstagetext">LiveScore Bet</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">5</h1>
+            <h1 class="supportstagetext">BetVictor</h1>
+            <h1 class="supportstagetext">Unibet</h1>
+            <h1 class="supportstagetext">Rhino Bet</h1>
+            <h1 class="supportstagetext">Grosvenor Sports</h1>
+            <h1 class="supportstagetext">LeoVegas</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">6</h1>
+            <h1 class="supportstagetext">SpreadEx</h1>
+            <h1 class="supportstagetext">BetUk</h1>
+            <h1 class="supportstagetext">Tote</h1>
+            <h1 class="supportstagetext">Paddypower</h1>
+            <h1 class="supportstagetext">Bwin</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">7</h1>
+            <h1 class="supportstagetext">Fafabet</h1>
+            <h1 class="supportstagetext">10Bet</h1>
+            <h1 class="supportstagetext">Betway</h1>
+            <h1 class="supportstagetext">SportingBet</h1>
+            <h1 class="supportstagetext">VBet</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">8</h1>
+            <h1 class="supportstagetext">Talk Sport<strong>‍</strong></h1>
+            <h1 class="supportstagetext"><strong>Boyle Sports</strong></h1>
+            <h1 class="supportstagetext">CopyBet</h1>
+            <h1 class="supportstagetext">Hollywood Bets</h1>
+          </div>
+          <div class="supstageholder">
+            <h1 class="supportstagetext number">9</h1>
+            <h1 class="supportstagetext"><strong>BresBet</strong></h1>
+            <h1 class="supportstagetext"><strong>Bet Goodwin</strong></h1>
+            <h1 class="supportstagetext">Quinn Bet</h1>
+            <h1 class="supportstagetext"><strong>Fitzdares</strong></h1>
+          </div>
+        </div>
+      </div>
       <div class="supportusermenuholder">
         <div class="supportusermenu">
           <h1 id="support-menu-accounts" class="supportmenutitle active">Accounts</h1>
