fixed some errors

--- a/public/abetting.html
+++ b/public/abetting.html
@@ -13,7 +13,7 @@
 </head>
 <body class="flex flex-col w-screen">
     <div id="nav-menu" class="flex flex-row items-center w-screen justify-center gap-8 py-8">
-        <a href="/dash" class="text-white px-4 py-2 font-bold  rounded hover:bg-zinc-700">Dashboard</a>
+        <a href="/users" class="text-white px-4 py-2 font-bold  rounded hover:bg-zinc-700">Dashboard</a>
         <a href="/accounts" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Accounts</a>
         <a href="/betting" class="text-white px-4 py-2 font-bold bg-zinc-700  rounded hover:bg-zinc-700">Other Betting</a>
         <a href="/affiliate" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Affiliate</a>
