--- a/public/bookmakers.html
+++ b/public/bookmakers.html
@@ -12,7 +12,7 @@
 </head>
 <body class="flex flex-col w-screen">
   <div id="nav-menu" class="flex flex-row items-center w-screen justify-center gap-8 py-8">
-    <a href="/dash" class="text-white px-4 py-2 font-bold  rounded hover:bg-zinc-700">Dashboard</a>
+    <a href="/users" class="text-white px-4 py-2 font-bold  rounded hover:bg-zinc-700">Dashboard</a>
     <a href="/accounts" class="text-white px-4 py-2 font-bold bg-zinc-700 rounded hover:bg-zinc-700">Accounts</a>
     <a href="/betting" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Other Betting</a>
     <a href="/affiliate" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Affiliate</a>
@@ -40,7 +40,7 @@
         <div class="text-gray-400 font-light text-lg">Profit</div>
     </div>
     <div class="basis-1/5 bg-zinc-950 border border-zinc-700 py-8 px-4 flex flex-col gap-4 rounded">
-        <div id="deposits-net-counter" class="text-white text-2xl font-bold">£450</div>
+        <div id="deposits-net-counter" class="text-white text-2xl font-bold">£0</div>
         <div class="text-gray-400 font-light text-lg">Funds for Deposits</div>
     </div>
   </div>
