--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,7 +14,7 @@
 <body class="flex flex-col w-screen justify-center">
 
   <div id="nav-menu" class="flex flex-row items-center w-screen justify-center gap-8 py-8 hidden">
-    <a href="/dash" class="text-white px-4 py-2 font-bold bg-zinc-700  rounded hover:bg-zinc-700">Dashboard</a>
+    <a href="/users" class="text-white px-4 py-2 font-bold bg-zinc-700  rounded hover:bg-zinc-700">Dashboard</a>
     <a href="/accounts" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Accounts</a>
     <a href="/betting" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Other Betting</a>
     <a href="/affiliate" class="text-white px-4 py-2 font-boldrounded hover:bg-zinc-700">Affiliate</a>
