--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,19 +11,19 @@
   <script defer="" src="js/dashboard.js" type="text/javascript"></script>
   <title>CMBetting</title>
 </head>
-<body class="flex flex-col w-screen justify-center">
+<body class="flex flex-col w-screen justify-center py-8">
 
   <div id="nav-menu" class="flex flex-row items-center w-screen justify-center gap-8 py-8 hidden">
     <a href="/users" class="text-white px-4 py-2 font-bold bg-zinc-700  rounded hover:bg-zinc-700">Dashboard</a>
     <a href="/accounts" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Accounts</a>
-    <a href="/betting" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Other Betting</a>
+    <a href="/betting" class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700">Value Betting</a>
     <a href="/affiliate" class="text-white px-4 py-2 font-boldrounded hover:bg-zinc-700">Affiliate</a>
   </div>
 
   <div id="disabled-nav-menu" class="flex flex-row items-center w-screen justify-center gap-8 py-8">
     <a href="/dash" class="text-white px-4 py-2 font-bold bg-zinc-700  rounded hover:bg-zinc-700">Dashboard</a>
     <a class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700 flex flex-row gap-4">Accounts <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-lock"><rect width="18" height="11" x="3" y="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg></a>
-    <a class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700 flex flex-row gap-4">Other Betting <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-lock"><rect width="18" height="11" x="3" y="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg></a>
+    <a class="text-white px-4 py-2 font-bold rounded hover:bg-zinc-700 flex flex-row gap-4">Value Betting <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-lock"><rect width="18" height="11" x="3" y="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg></a>
     <a href="/affiliate" class="text-white px-4 py-2 font-boldrounded hover:bg-zinc-700">Affiliate</a>
   </div>
 
