--- a/public/abetting.html
+++ b/public/abetting.html
@@ -20,15 +20,7 @@
       </div>
     <div id="viewport-container" class="w-[100%] flex flex-col gap-8">
             
-        <div id="money-info-container" class="flex flex-row gap-4 w-screen justify-center items-center">
-            <div class="basis-1/3 bg-zinc-950 border border-zinc-700 py-8 px-4 flex flex-col gap-4 rounded">
-                <div id='profit' class="text-white text-2xl font-bold">£450</div>
-                <div class="text-gray-400 font-light text-lg">Total Profit</div>
-            </div>
-            <div class="basis-1/3 bg-zinc-950 border border-zinc-700 py-8 px-4 flex flex-col gap-4 rounded">
-                <div id="deposits" class="text-white text-2xl font-bold">£450</div>
-                <div class="text-gray-400 font-light text-lg">Amount In Accounts</div>
-            </div>
+        <div hx-get="/cmbettingapi/getobmoneyinfouser" hx-trigger="load" hx-swap="innerHTML" class="flex flex-row gap-4 w-screen justify-center items-center">
         </div>
 
         <div class="flex flex-col items-center w-[100%]">
@@ -80,6 +72,7 @@
                     <div id="details-email" class="text-white">Test@gmail.com</div>
                     <div id="details-username" class="text-white">Test</div>
                     <div id="details-password" class="text-white">Test Password</div>
+                    <button id='edit-button' class="text-black bg-white rounded font-bold px-4 py-2 hover:bg-gray-300 transition duration-200 hover:scale-[102%]">Edit</button>
                 </div>
                 <form id='details-form' action="" class="flex flex-col gap-4">
                     <div class="text-white text-2xl">Add Your Details</div>
