--- a/public/supporttest.html
+++ b/public/supporttest.html
@@ -11,7 +11,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
-<body id='user-container' class="flex flex-row flex-wrap gap-4 justify-center w-screen p-8">
+<script>
+  function redirect(url) {
+    window.location.href = url;
+  }
+</script>
+<body hx-get="/cmbettingapi/getusershtmx" hx-trigger='load' id='user-container' class="flex flex-row flex-wrap gap-4 justify-center w-screen p-8">
 
   <div id="user-template" class="bg-zinc-950 border border-zinc-700 py-4 px-8 flex flex-col gap-4 rounded w-[30%]">
     <div id="fullname" class="text-white font-bold">Full Name</div>
