--- a/public/supportvb.html
+++ b/public/supportvb.html
@@ -16,7 +16,7 @@
           window.location.href = url;
         }
       </script>
-<body class="flex flex-col justify-center w-screen">
+<body class="flex flex-col justify-center w-screen items-center">
 
     <div class="flex flex-row flex-wrap gap-8 py-8 px-16 items-center">
         <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
