support aesthetic changes

--- a/public/supportvb.html
+++ b/public/supportvb.html
@@ -18,44 +18,44 @@
       </script>
 <body class="flex flex-col justify-center w-screen items-center">
 
-    <div class="flex flex-row flex-wrap gap-8 py-8 px-16 items-center">
-        <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
+    <div class="flex flex-row flex-wrap gap-8 py-8 px-16 items-center justify-center">
+        <div class="basis-1/2 flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
             <div class="flex flex-row gap-8 items-center">
                 <div class="text-white font-bold text-2xl">Bet365</div>
             </div>
             <div hx-get="/cmbettingapi/getoballaccounts" hx-trigger="load" hx-swap="innerHTML" hx-vals='{"bookmaker": "Bet365"}' class="flex flex-col gap-4"></div>
         </div>
-        <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
+        <div class="basis-1/2 flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
             <div class="flex flex-row gap-8 items-center">
                 <div class="text-white font-bold text-2xl">Coral</div>
             </div>
             <div hx-get="/cmbettingapi/getoballaccounts" hx-trigger="load" hx-swap="innerHTML" hx-vals='{"bookmaker": "Coral"}' class="flex flex-col gap-4"></div>
         </div>
-        <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
+        <div class="basis-1/2 flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
             <div class="flex flex-row gap-8 items-center">
                 <div class="text-white font-bold text-2xl">WilliamHill</div>
             </div>
             <div hx-get="/cmbettingapi/getoballaccounts" hx-trigger="load" hx-swap="innerHTML" hx-vals='{"bookmaker": "WilliamHill"}' class="flex flex-col gap-4"></div>
         </div>
-        <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
+        <div class="basis-1/2 flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
             <div class="flex flex-row gap-8 items-center">
                 <div class="text-white font-bold text-2xl">Skybet</div>
             </div>
             <div hx-get="/cmbettingapi/getoballaccounts" hx-trigger="load" hx-swap="innerHTML" hx-vals='{"bookmaker": "Skybet"}' class="flex flex-col gap-4"></div>
         </div>
-        <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
+        <div class="basis-1/2 flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
             <div class="flex flex-row gap-8 items-center">
                 <div class="text-white font-bold text-2xl">Ladbrokes</div>
             </div>
             <div hx-get="/cmbettingapi/getoballaccounts" hx-trigger="load" hx-swap="innerHTML" hx-vals='{"bookmaker": "Ladbrokes"}' class="flex flex-col gap-4"></div>
         </div>
-        <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
+        <div class="basis-1/2 flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
             <div class="flex flex-row gap-8 items-center">
                 <div class="text-white font-bold text-2xl">888sport</div>
             </div>
             <div hx-get="/cmbettingapi/getoballaccounts" hx-trigger="load" hx-swap="innerHTML" hx-vals='{"bookmaker": "888sport"}' class="flex flex-col gap-4"></div>
         </div>
-        <div class="flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
+        <div class="basis-1/2 flex flex-col gap-4 items-start rounded bg-zinc-900 border border-zinc-700 px-8 py-4">
             <div class="flex flex-row gap-8 items-center">
                 <div class="text-white font-bold text-2xl">BetVictor</div>
             </div>
