--- a/public/supportusertest.html
+++ b/public/supportusertest.html
@@ -69,7 +69,7 @@
 <body class="flex flex-col justify-center w-screen">
     
     <div hx-trigger='load' hx-get="/cmbettingapi/supportuserinfo"></div>
-    <div hx-trigger='every 2s' hx-get="/cmbettingapi/getmoneyinfohtmx"></div>
+    <div hx-trigger='load, every 2s' hx-get="/cmbettingapi/getmoneyinfohtmx"></div>
 
     <div class="flex flex-row border border-zinc-700 w-[100%] px-24 py-8 justify-center items-center gap-16">
         <div class="flex flex-col gap-4">
